# TMCRBM

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
dataset/: .gitignore
notebook/: analyse_gene.ipynb  sample_1d2c.ipynb  sample_2d3c.ipynb  train_1d2c.ipynb  train_2d3c.ipynb
rbm/: definitions.py  functions.py  tmc_utils.py
rbm/models/: __init__.py  rbm.py  tmcrbm.py  tmcrbm2d.py
