[metadata]
name = rbm
version = 1.0.0
author = Nicolas Béreux, Aurélien Decelle, Cyril Furtlehner, Beatriz Seoane
author_email = nicolas.bereux@gmail.com
description = For training and analysis Restricted Boltzmann Machine using Tethered Monte-Carlo Sampling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nbereux/tmcrbm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = rbm
include = *.py
exclude = rbm/models/__init__.py